tests/bad/no_static_member.ae
/// fail: Type 'Foo' has no member with this name

struct Foo {}

def main() {
    Foo::foo()
    Bar::foo()
}